--- a/URL-shortener/ClientApp/src/app/section/section.component.css
+++ b/URL-shortener/ClientApp/src/app/section/section.component.css
@@ -73,3 +73,8 @@ h1 {
     -webkit-appearance: button;
     margin: 0;
   }
+section .boxtextcenter {
+  margin: 10px auto 20px;
+  text-align: center;
+  max-width: 620px;
+}
