--- a/URL-shortener/ClientApp/src/app/section/section.component.html
+++ b/URL-shortener/ClientApp/src/app/section/section.component.html
@@ -2,11 +2,12 @@
   <h1>Paste the URL to be shortened</h1>
   <form>
     <div id="formurl">
-      <input type="text" name="u" placeholder="Enter the link here" [(ngModel)]="URl" (Keyup.enter)="onKeyUp()">
-      <div id="formbutton">
+      <input type="text" name="u" placeholder="Enter the link here" [(ngModel)] = "URl" (Keyup.enter)="onKeyUp()">
+      <div id="formbutton" (click)="onKeyUp()">
         <input type="submit" value="Shorten URL">
       </div>
     </div>
   </form>
-  <p class="boxtextcenter">ShortURL.at is a free tool to shorten a URL or reduce a link<br>Use our URL Shortener to create a shortened link making it easy to remember</p>
+  <p class="boxtextcenter">{{UrlShortener}}</p>
+
 </section>
