--- a/URL-shortener/ClientApp/src/app/section/section.component.css
+++ b/URL-shortener/ClientApp/src/app/section/section.component.css
@@ -1,5 +1,5 @@
 section#urlbox {
-  margin: 0 auto 20px auto;
+  margin: 50px auto 20px auto;
   max-width: 758px;
   box-shadow: 0 1px 4px #ccc;
   border-radius: 2px;
